--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/cannon-es@0.19.0/dist/cannon-es.js"></script>
     <style>
         body { margin: 0; overflow: hidden; background: #000; font-family: sans-serif; }
-        #overlay { position: fixed; top: 20px; left: 20px; color: #0f0; background: rgba(0,0,0,0.8); padding: 15px; border-radius: 5px; font-size: 14px; pointer-events: none; line-height: 1.5; }
+        #overlay { position: fixed; top: 20px; left: 20px; color: #0f0; background: rgba(0,0,0,0.8); padding: 15px; border-radius: 5px; font-size: 12px; pointer-events: none; }
     </style>
 </head>
 <body>
     <div id="overlay">
-        【調整モード】<br>
-        - キーボード <b>↑</b> : モデルを上げる<br>
-        - キーボード <b>↓</b> : モデルを下げる<br>
-        - 現在の OFFSET: <span id="val">0.4</span><br>
-        <small>足が着いたらこの数値をコードに反映してください</small>
+        PHYSICS ENGINE: SETTLED<br>
+        - 接地オフセット固定完了 (Stand: 0.05 / Crouch: 0.20)<br>
+        - しゃがみ動作を滑らかに補間しました
     </div>
 
     <script type="module">
@@ -30,10 +28,13 @@
         let actions = {}, currentAction;
         let cameraAzimuth = 0, cameraElevation = 0.2;
 
-        // --- 調整用変数 ---
+        // --- 確定した調整値 ---
         const RADIUS = 0.4;
-        let MODEL_OFFSET = 0.4; // ここをキー操作で動かします
+        const OFFSET_STAND = 0.05;
+        const OFFSET_CROUCH = 0.20;
+        let currentVisualOffset = OFFSET_STAND; // 現在の見た目上の沈み込み量
         let smoothCameraTargetY = 0;
+        // --------------------
 
         function fadeToAction(name, duration = 0.2) {
             const nextAction = actions[name];
@@ -70,10 +71,11 @@
             renderer.setSize(window.innerWidth, window.innerHeight);
             document.body.appendChild(renderer.domElement);
 
-            scene.add(new THREE.Mesh(new THREE.PlaneGeometry(1000, 1000), new THREE.MeshStandardMaterial({ color: 0x222222 })));
-            scene.add(new THREE.GridHelper(1000, 1000, 0x444444, 0x888888));
+            const floorMesh = new THREE.Mesh(new THREE.PlaneGeometry(1000, 1000), new THREE.MeshStandardMaterial({ color: 0x222222 }));
+            floorMesh.rotation.x = -Math.PI / 2;
+            scene.add(floorMesh);
+            scene.add(new THREE.GridHelper(1000, 100, 0x444444, 0x333333));
             
-            // デバッグ球
             debugSphere = new THREE.Mesh(new THREE.SphereGeometry(RADIUS), new THREE.MeshBasicMaterial({ color: 0xff0000, wireframe: true }));
             scene.add(debugSphere);
 
@@ -115,24 +117,15 @@
             });
 
             window.onkeydown = (e) => {
-                const k = e.key;
-                if (['e', 's', 'q', 'c'].includes(k.toLowerCase())) moveState[k.toLowerCase()] = true;
-                if (k.toLowerCase() === 'v') isCrouching = !isCrouching;
+                const k = e.key.toLowerCase();
+                if (['e', 's', 'q', 'c'].includes(k)) moveState[k] = true;
+                if (k === 'v') isCrouching = !isCrouching;
                 if (k === ' ' && !isJumping && canJump) { 
                     characterBody.velocity.y = 8;
                     isJumping = true; canJump = false;
                     fadeToAction('jump_start', 0.1);
                 }
-
-                // リアルタイム調整用
-                if (k === 'ArrowUp') { MODEL_OFFSET -= 0.05; updateUI(); }
-                if (k === 'ArrowDown') { MODEL_OFFSET += 0.05; updateUI(); }
             };
-
-            function updateUI() {
-                document.getElementById('val').innerText = MODEL_OFFSET.toFixed(2);
-            }
-
             window.onkeyup = (e) => {
                 const k = e.key.toLowerCase();
                 if (['e', 's', 'q', 'c'].includes(k)) moveState[k] = false;
@@ -162,14 +155,18 @@
                         if (!isJumping) fadeToAction(isCrouching ? 'crouch_idle' : 'idle', 0.2);
                     }
 
+                    // --- 滑らかな接地補正 (見た目) ---
+                    const targetOffset = isCrouching ? OFFSET_CROUCH : OFFSET_STAND;
+                    currentVisualOffset += (targetOffset - currentVisualOffset) * 0.1; // じわっと変化
+
                     debugSphere.position.copy(characterBody.position);
-                    
-                    // 同期計算：埋まっている場合は MODEL_OFFSET を減らす（マイナスにする）必要があるかもしれません
-                    let verticalAdjustment = RADIUS + MODEL_OFFSET; 
-                    if (isCrouching) verticalAdjustment += 0.25; 
+                    model.position.set(
+                        characterBody.position.x,
+                        characterBody.position.y - (RADIUS + currentVisualOffset), 
+                        characterBody.position.z
+                    );
 
-                    model.position.set(characterBody.position.x, characterBody.position.y - verticalAdjustment, characterBody.position.z);
-
+                    // --- カメラのスムーズ処理 ---
                     const targetY = model.position.y + 1.2;
                     smoothCameraTargetY += (targetY - smoothCameraTargetY) * 0.1;
 
