--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         let scene, camera, renderer, clock, mixer, model;
         let moveState = { q: false, e: false, c: false, s: false };
         let velocityY = 0, isJumping = false, canJump = true;
-        let isCrouching = false; // しゃがみ状態のトグル管理
+        let isCrouching = false;
         let actions = {}, currentAction;
         let cameraAzimuth = 0, cameraElevation = 0.2;
 
@@ -55,15 +55,17 @@
             });
 
             const loader = new THREE.GLTFLoader();
+            
             loader.load('./m.glb', (gltf) => {
                 model = gltf.scene;
+                // 初期位置を立ち状態のオフセットに設定
+                model.position.y = 0.05;
                 scene.add(model);
                 mixer = new THREE.AnimationMixer(model);
 
                 ['./a.glb', './b.glb'].forEach(url => {
                     loader.load(url, (animGltf) => {
-                        const anims = animGltf.animations;
-                        anims.forEach((clip, index) => {
+                        animGltf.animations.forEach((clip, index) => {
                             clip.tracks = clip.tracks.filter(t => !t.name.endsWith('.position'));
                             const action = mixer.clipAction(clip);
                             const name = clip.name;
@@ -71,9 +73,9 @@
                             if (name === 'Idle_Loop') actions['idle'] = action;
                             if (name === 'Walk_Loop') actions['walk'] = action;
                             if (name === 'Sprint_Loop') actions['run'] = action;
-                            if (name === 'Jump_Start') { actions['jump_start'] = action; action.setLoop(THREE.LoopOnce); action.clampWhenFinished = true; }
+                            if (name === 'Jump_Start') { action.setLoop(THREE.LoopOnce); action.clampWhenFinished = true; actions['jump_start'] = action; }
                             if (name === 'Jump_Loop') actions['jump_loop'] = action;
-                            if (name === 'Jump_Land') { actions['jump_land'] = action; action.setLoop(THREE.LoopOnce); action.clampWhenFinished = true; }
+                            if (name === 'Jump_Land') { action.setLoop(THREE.LoopOnce); action.clampWhenFinished = true; actions['jump_land'] = action; }
 
                             if (url === './b.glb') {
                                 if (index === 1) actions['crouch_walk'] = action;
@@ -97,13 +99,12 @@
                 const k = e.key.toLowerCase();
                 if (['e','s','q','c'].includes(k)) moveState[k] = true;
 
-                // Vキーでしゃがみトグル
                 if (k === 'v') {
                     isCrouching = !isCrouching;
                     document.getElementById('status').innerText = isCrouching ? "Mode: Crouching" : "Mode: Standing";
                 }
 
-                if (k === ' ' && !isJumping && canJump) { 
+                if (k === ' ' && !isJumping && canJump && !isCrouching) { 
                     isJumping = true;
                     canJump = false; 
                     velocityY = 0.18; 
@@ -128,7 +129,7 @@
                     if (moveState.e) inputZ -= 1;
                     if (moveState.s) inputZ += 1;
                     if (moveState.q) inputX -= 1;
-                    if (moveState.c) inputX += 1; // Cキーで右移動
+                    if (moveState.c) inputX += 1;
 
                     const isMoving = (inputX !== 0 || inputZ !== 0);
 
@@ -139,7 +140,6 @@
                         while (diff > Math.PI) diff -= Math.PI * 2;
                         model.rotation.y += diff * 0.15;
 
-                        // 速度計算：しゃがみ中は常に歩き速度
                         const onlyForward = (moveState.e && !moveState.s && !moveState.q && !moveState.c);
                         let speed = (onlyForward && !isCrouching) ? 0.14 : 0.07;
                         
@@ -157,13 +157,15 @@
                         }
                     }
 
+                    // --- ジャンプとオフセットの制御 ---
                     if (isJumping) {
                         model.position.y += velocityY;
                         velocityY -= 0.008;
                         if (velocityY < 0 && currentAction === actions['jump_start']) fadeToAction('jump_loop', 0.3);
 
-                        if (model.position.y <= 0) {
-                            model.position.y = 0;
+                        // 着地判定（立ち状態のオフセット 0.05 に戻る）
+                        if (model.position.y <= 0.05) {
+                            model.position.y = 0.05;
                             isJumping = false;
                             fadeToAction('jump_land', 0.1);
                             setTimeout(() => {
@@ -172,6 +174,11 @@
                                 else fadeToAction(isCrouching ? 'crouch_idle' : 'idle', 0.2);
                             }, 300);
                         }
+                    } else {
+                        // 指定されたオフセット値を適用
+                        const targetOffset = isCrouching ? 0.20 : 0.05;
+                        // 線形補間で滑らかに高さを変える
+                        model.position.y += (targetOffset - model.position.y) * 0.1;
                     }
 
                     const dist = 5;
