--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>新しいタブ</title>
+    <title>3D Character Game - Shoulder View</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/loaders/GLTFLoader.js"></script>
     <style>
@@ -88,7 +88,7 @@
             window.addEventListener('mousemove', (e) => {
                 if (document.pointerLockElement === document.body) {
                     cameraAzimuth -= e.movementX * 0.002;
-                    cameraElevation = Math.max(-0.4, Math.min(1.2, cameraElevation + e.movementY * 0.002));
+                    cameraElevation = Math.max(-0.6, Math.min(1.0, cameraElevation + e.movementY * 0.002));
                 }
             });
 
@@ -96,12 +96,10 @@
                 if (e.repeat) return;
                 const k = e.key.toLowerCase();
                 if (['e','s','q','c'].includes(k)) moveState[k] = true;
-
                 if (k === 'v') {
                     isCrouching = !isCrouching;
                     document.getElementById('status').innerText = isCrouching ? "Mode: Crouching" : "Mode: Standing";
                 }
-
                 if (k === ' ' && !isJumping && canJump) { 
                     isJumping = true;
                     canJump = false; 
@@ -155,12 +153,10 @@
                         }
                     }
 
-                    // --- ジャンプとしゃがみの高さ制御 ---
                     if (isJumping) {
                         model.position.y += velocityY;
                         velocityY -= 0.008;
                         if (velocityY < 0 && currentAction === actions['jump_start']) fadeToAction('jump_loop', 0.3);
-
                         if (model.position.y <= 0) {
                             model.position.y = 0;
                             isJumping = false;
@@ -172,19 +168,37 @@
                             }, 300);
                         }
                     } else {
-                        // ★しゃがみ状態の時に高さを下げる
-                        // -0.4 の値を変更して、足が地面に接する位置に調整してください
                         const targetY = isCrouching ? -0.4 : 0;
-                        model.position.y += (targetY - model.position.y) * 0.1; // 滑らかに移動
+                        model.position.y += (targetY - model.position.y) * 0.1;
                     }
 
-                    const dist = 5;
-                    camera.position.set(
-                        model.position.x + dist * Math.sin(cameraAzimuth) * Math.cos(cameraElevation),
-                        model.position.y + 1.8 + dist * Math.sin(cameraElevation),
-                        model.position.z + dist * Math.cos(cameraAzimuth) * Math.cos(cameraElevation)
+                    // --- TPSカメラ（フォートナイト風）の制御 ---
+                    const camDist = 2.5;     // モデルとの距離（近づけました）
+                    const camSide = 0.6;     // 右へのオフセット量
+                    const camHeight = 1.5;   // 注視点の高さ
+
+                    // カメラの水平・垂直方向の計算
+                    const horizontalDist = camDist * Math.cos(cameraElevation);
+                    const verticalDist = camDist * Math.sin(cameraElevation);
+
+                    // 基本の背面位置
+                    let camPosX = model.position.x + horizontalDist * Math.sin(cameraAzimuth);
+                    let camPosZ = model.position.z + horizontalDist * Math.cos(cameraAzimuth);
+                    let camPosY = model.position.y + camHeight + verticalDist;
+
+                    // さらに右へずらす（カメラの右方向ベクトルを計算して加算）
+                    camPosX += Math.cos(cameraAzimuth) * camSide;
+                    camPosZ -= Math.sin(cameraAzimuth) * camSide;
+
+                    camera.position.set(camPosX, camPosY, camPosZ);
+
+                    // 視点はキャラクターの少し右側（肩越し）を狙う
+                    const lookTarget = new THREE.Vector3(
+                        model.position.x + Math.cos(cameraAzimuth) * (camSide * 0.5),
+                        model.position.y + camHeight,
+                        model.position.z - Math.sin(cameraAzimuth) * (camSide * 0.5)
                     );
-                    camera.lookAt(model.position.x, model.position.y + 1.2, model.position.z);
+                    camera.lookAt(lookTarget);
                 }
                 renderer.render(scene, camera);
             }
