--- a/index.html
+++ b/index.html
@@ -178,28 +178,35 @@
                         model.position.y += (targetY - model.position.y) * 0.1;
                     }
 
-                    // --- TPSカメラ制御：再調整版 ---
+                    // --- 改良版：滑らかなTPSカメラ制御 ---
                     const camDist = 2.4;
-                    const camSide = 0.9;     // 1.1 から微調整して 0.9 へ
+                    const camSide = 1.0; // 0.9 + 0.1 で 1.0 に設定
                     const camHeight = 1.5;
 
+                    // 目標地点の計算
                     const horizontalDist = camDist * Math.cos(cameraElevation);
                     const verticalDist = camDist * Math.sin(cameraElevation);
 
-                    let camPosX = model.position.x + horizontalDist * Math.sin(cameraAzimuth);
-                    let camPosZ = model.position.z + horizontalDist * Math.cos(cameraAzimuth);
-                    let camPosY = model.position.y + camHeight + verticalDist;
+                    let targetCamX = model.position.x + horizontalDist * Math.sin(cameraAzimuth);
+                    let targetCamZ = model.position.z + horizontalDist * Math.cos(cameraAzimuth);
+                    let targetCamY = model.position.y + camHeight + verticalDist;
 
-                    camPosX += Math.cos(cameraAzimuth) * camSide;
-                    camPosZ -= Math.sin(cameraAzimuth) * camSide;
+                    // 右オフセットを加算
+                    targetCamX += Math.cos(cameraAzimuth) * camSide;
+                    targetCamZ -= Math.sin(cameraAzimuth) * camSide;
 
-                    camera.position.set(camPosX, camPosY, camPosZ);
+                    // ★カメラを滑らかに目標へ近づける (Lerp)
+                    // 0.15 は追従の強さ。数値を下げるとよりヌルヌル（遅れて）ついてきます。
+                    camera.position.x += (targetCamX - camera.position.x) * 0.15;
+                    camera.position.y += (targetCamY - camera.position.y) * 0.15;
+                    camera.position.z += (targetCamZ - camera.position.z) * 0.15;
 
+                    // 注視点：カメラから真っ直ぐ前を見る
                     const lookDistance = 20;
                     const lookTarget = new THREE.Vector3(
-                        camPosX - Math.sin(cameraAzimuth) * lookDistance,
-                        camPosY - Math.sin(cameraElevation) * lookDistance,
-                        camPosZ - Math.cos(cameraAzimuth) * lookDistance
+                        camera.position.x - Math.sin(cameraAzimuth) * lookDistance,
+                        camera.position.y - Math.sin(cameraElevation) * lookDistance,
+                        camera.position.z - Math.cos(cameraAzimuth) * lookDistance
                     );
                     camera.lookAt(lookTarget);
                 }
